--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,28 @@
-on: push
-name: 🚀 Deploy website on push
+name: Deploy via SFTP
+
+on:
+  push:
+    branches:
+      - main  # Spustí se při každém pushi na větev main
+
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-    
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ftpx.forpsi.com
-        username: ${{ secrets.FTPUSERNAME }}
-        password: ${{ secrets.FTPPASSWORD }}
-        protocol: ftp
-        server-dir: /www/
+      - name: ⬇️ Checkout repository
+        uses: actions/checkout@v3
+
+      - name: 🧪 Build project
+        run: |
+          echo "Add your build steps here if needed"
+       
+
+      - name: 🚀 Deploy via SFTP
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SFTP_HOST }}
+          username: ${{ secrets.SFTP_USERNAME }}
+          password: ${{ secrets.SFTP_PASSWORD }}
+          port: 22         
+          target: "/www/" 
