--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,6 @@ jobs:
           host: ${{ secrets.SFTP_HOST }}
           username: ${{ secrets.FTPUSERNAME }}
           password: ${{ secrets.FTPPASSWORD }}
-          port: 22         
+          port: 22      
+          source: "."
           target: "/www/" 
